@startuml
package entity {
  class User {
    - id: int
    - password: String
    - email: String
    - nome: String
    - cognome: String
    - isAdmin: boolean
    - profilo: Profilo
    + User(password: String, email: String, nome: String, cognome: String, isAdmin: boolean, profilo: Profilo)
    + getId(): int
    + setId(id: int): void
    + getPassword(): String
    + getEmail(): String
    + getNome(): String
    + getCognome(): String
    + isAdmin(): boolean
    + getProfilo(): Profilo
    + setProfilo(profilo: Profilo): void
    + toString(): String
  }

  class Profilo {
    - username: String
    - bio: String
    - immagineProfilo: String
    - dataNascita: Date
    + Profilo(username: String, bio: String, immagineProfilo: String, dataNascita: Date)
    + getUsername(): String
    + getBio(): String
    + getImmagineProfilo(): String
    + setImmagineProfilo(immagineProfilo: String): void
    + getDataNascita(): Date
    + toString(): String
  }

  class Poesia {
    - id: int
    - titolo: String
    - contenuto: String
    - tags: List<String>
    - visibile: boolean
    - dataCreazione: Date
    - autoreID: int
    - raccoltaID: int
    + Poesia(id: int, titolo: String, contenuto: String, tags: List<String>, visibile: boolean, dataCreazione: Date, autoreID: int, raccoltaID: int)
    + getId(): int
    + setId(id: int): void
    + getTitolo(): String
    + setTitolo(titolo: String): void
    + getContenuto(): String
    + getTags(): List<String>
    + getVisibile(): boolean
    + getDataCreazione(): Date
    + getAutoreID(): int
    + getRaccoltaID(): int
    + toString(): String
  }

  class Raccolta {
    - id: int
    - titolo: String
    - descrizione: String
    - autoreID: int
    + Raccolta(id: int, titolo: String, descrizione: String, autoreID: int)
    + getId(): int
    + setId(id: int): void
    + getTitolo(): String
    + setTitolo(titolo: String): void
    + getDescrizione(): String
    + getAutoreID(): int
    + toString(): String
  }

  class Commento {
    - id: int
    - poesiaID: int
    - autoreID: int
    - testo: String
    - dataCreazione: Date
    + Commento(id: int, poesiaID: int, autoreID: int, testo: String, dataCreazione: Date)
    + getId(): int
    + setId(id: int): void
    + getPoesiaID(): int
    + getAutoreID(): int
    + getTesto(): String
    + getDataCreazione(): Date
    + toString(): String
  }

  User "1" --> "1" Profilo: ha
  Poesia "0..*" --> "1" User: scritta da >
  Poesia "0..*" --> "0..1" Raccolta: appartiene a >
  Raccolta "0..*" --> "1" User: di >
  Commento "0..*" --> "1" Poesia: commento su >
  Commento "0..*" --> "1" User: scritto da >
}
@enduml